feat: 移除system下group\role\privilege\user关联接口，合并到核心对象中